5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4070/executions/1578_1330.log
== TEST (2019-03-11 20:00:12) 
-- CODE:
A=6
C=250
D=A/C
round(D, 2)

-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 20:00:33) 
-- CODE:
A=6
C=250
D=A/C
round(D, 2)
print(D)
-- OUTPUT:
0.024
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 20:00:54) 
-- CODE:
A=6
C=250
D=C/A
round(D, 2)
print(D)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 20:01:20) 
-- CODE:
A=6
C=250
D=C/A
print(D)
round(D, 2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 20:02:34) 
-- CODE:
A=6
C=250
D=C/A
print(Round(D, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(Round(D, 2))
NameError: name 'Round' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 20:02:42) 
-- CODE:
A=6
C=250
D=C/A
print(round(D,2))

-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 20:02:47) 
-- CODE:
A=6
C=250
D=C/A
print(round(D,2))

-- EXECUTION TIME:
0.125158
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
